k8s/service-a/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: service-a
  labels:
    app: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: service-a
          image: mydefaultcontainerregistry1.azurecr.io/samples/service-a:1.0.1
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
