k8s/service-a/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: service-a
spec:
  selector:
    app: service-a
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
